telecom-bretagne/javacompiler/SecondPhase/tests/Fail/TestModifierAttributeFail.java
class A {}
class B {
	native int x;
}
